--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+* {
+  margin: 0;
+}
+
 body {
+  --sloth-chat-color: #111c2d;
+  overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
